index.html tweak

--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@ onmouseover="this.className = 'rowselected';" onmouseout="this.className = 'shad
 </tr><tr valign="top"
 onmouseover="this.className = 'rowselected';" onmouseout="this.className = '';"> 
 
-<td align="center"><sup>Hg2+</sup></td>
+<td align="center">Hg<sup>2+</sup></td>
 <td>CYPHR (FRET: PLC activity)</td>
 <td>FRET-based biosensors- mechanical force</td>
 <td>?</td>
