--- a/public/index.html
+++ b/public/index.html
@@ -231,7 +231,7 @@ onChange="javascript: _blank;">
 <td>Host System</td>
 <td>Km(in vitro properties?)</td>
 <td>Organism of in vivo analysis</td>
-<td>Flourophore</td>
+<td>Fluorophore</td>
 <td>PI</td>
 </tr>
 
