index page tweak

--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
 <TABLE WIDTH=100% CELLPADDING=4 CELLSPACING=0 BORDER=0 align=center style="border: solid; border-width: 1px; border-color: #C0C0C0;">
 <tr>
 <td align=center valign=middle class=shade>
-<b>Search for substrates: </b> 
+<b>Search by biosensor specificity: </b> 
 </td>
 <!--<td>
 <select id="ctlSearchField">
