tweak index page

--- a/public/index.html
+++ b/public/index.html
@@ -268,7 +268,7 @@ onmouseover="this.className = 'rowselected';" onmouseout="this.className = '';">
 onmouseover="this.className = 'rowselected';" onmouseout="this.className = '';"> 
 
 <td align="center">PO<sub>4</sub><sup>2-</sup></td>
-<td>FP-PH<sup>PLCd1</sup>(FRET)</td>
+<td>FP-PH<sup>PLC<sub>&delta;</sub>1</sup>(FRET)</td>
 <td>Single FP-based intrinsic biosensors</td>
 <td>?</td>
 <td>?</td>
