--- a/public/index.html
+++ b/public/index.html
@@ -228,8 +228,7 @@ onChange="javascript: _blank;">
 <td>Name</td>
 <td>Type</td>
 <td>Analysis Technique</td>
-<td>Host System</td>
-<td>Km(in vitro properties?)</td>
+<td>In vitro properties</td>
 <td>Organism of in vivo analysis</td>
 <td>Fluorophore</td>
 <td>PI</td>
@@ -242,7 +241,6 @@ onmouseover="this.className = 'rowselected';" onmouseout="this.className = 'shad
 <td align="center">PtdIns(4,5)P<sub>2</sub>:Ins(1,4,5) P3 dynamics</td>
 <td>GFP-PH<sub>PLC-</sub></td>
 <td>Translocation-based biosensors</td>
-<td>?</td>
 <td>?</td>
 <td>?</td>
 <td>?</td>
@@ -261,7 +259,6 @@ onmouseover="this.className = 'rowselected';" onmouseout="this.className = '';">
 <td>?</td>
 <td>?</td>
 <td>?</td>
-<td>?</td>
 <td><a href="http://www.ncbi.nlm.nih.gov/pubmed/9512420" >Meyer,T</a></td></td>
 </tr>
 <tr valign="top" class="shade"
@@ -270,7 +267,6 @@ onmouseover="this.className = 'rowselected';" onmouseout="this.className = '';">
 <td align="center">PO<sub>4</sub><sup>2-</sup></td>
 <td>FP-PH<sup>PLC<sub>&delta;</sub>1</sup>(FRET)</td>
 <td>Single FP-based intrinsic biosensors</td>
-<td>?</td>
 <td>?</td>
 <td>?</td>
 <td>?</td>
